17-quarkus-deployment/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-example
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    application: quarkus
    component: native
