17-quarkus-deployment/manifests/route-internal.yml
apiVersion: v1
kind: Route
metadata:
  name: quarkus-example-internal
  labels:
    route-type: internal
spec:
  host: quarkus-example.apps.opentlc.internal
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: quarkus-example
